--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		</div>
 		<br><br><br><br>
 		<div class="footer">
-			<p><a href="#">For Nerds <i class="fa fa-github-alt"></a></i></p>
+			<p><a href="https://github.com/hemansutanty/QuoteMachine">For Nerds <i class="fa fa-github-alt"></a></i></p>
 			<p>Made with <i class="fa fa-heart"></i> by Hemansu</p>
 		</div>
 	</body>
